# quickstart_agent-augmented-development

./: .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  .importlinter  .mutmut_config.py  .shellcheckrc  404.html  =3.0.0  AGENTS.md  AGENT_PORTFOLIO_README.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ISSUE_8_FINAL_REPORT.md  LICENSE  ORCHESTRATION_CYCLE_COMPLETE.md  PR_COMMENT_EXECUTIVE_SUMMARY.md  README.md  REPO_MAP.md  SURFACES.md  TESTING_STATUS.md  VERIFICATION_COMMANDS.md  VISION.md  agents  conftest.py  coverage-agent-portfolio.json  coverage-doctrine-final.json  coverage-doctrine.json  coverage.json  demo-validation.js  docker-compose.yml  en.search-data.min.9e3e6a405c2b4a7537e5850f58aa4d91e9b54c7d935cbca813c55d1fb8da17d4.json  en.search-data.min.fd91f36062da65f70563b50060494dda507d01bf302ef70da067a457c65d6fb0.json  en.search.min.43ae28604f1e588564286d980a7f8eac2975c71bdd78c912bec3d6cfdf5625b0.js  en.search.min.875a621f4fb7f2d1ed641efcd037107f9bcf28b86ce18477ea2c1b5b4d518075.js  index.html  index.xml  (+18 more)
.claude/agents/: README.md  analyst-annie.agent.md  architect.agent.md  backend-dev.agent.md  bootstrap-bill.agent.md  build-automation.agent.md  code-reviewer-cindy.agent.md  curator.agent.md  diagrammer.agent.md  framework-guardian.agent.md  frontend.agent.md  java-jenny.agent.md  lexical.agent.md  manager.agent.md  manifest.json  project-planner.agent.md  python-pedro.agent.md  researcher.agent.md  reviewer.agent.md  scribe.agent.md  synthesizer.agent.md  translator.agent.md  writer-editor.agent.md
.claude/prompts/: README.md  manifest.json
.claude/rules/: architecture.md  coding-conventions.md  collaboration.md  guidelines.md  testing.md
.contextive/: definitions.yml
.contextive/contexts/: ddd.yml  doctrine.yml  organizational.yml  portfolio-domain.yml  software-design.yml  task-domain.yml
.cursor/: QUICK_REFERENCE.md
.doctrine-config/: README.md  config.yaml  model_router.yaml  repository-guidelines.md
.doctrine-config/custom-agents/: README.md
.doctrine-config/hooks/: README.md
.doctrine-config/styleguides/: README.md  python-naming-conventions.md
.doctrine-config/tactics/: README.md  terminology-validation-checklist.tactic.md
.doctrine-config/templates/: README.md  pr-comment-templates.md
.github/: VERSION_MANAGEMENT.md  copilot-instructions.md  labels.yml  versions.yml
.github/actions/: README.md
.opencode/: manifest.json
META/: MANIFEST.yml
architecture/: index.html  index.xml
categories/: index.html  index.xml
config/: agents.yaml  agents.yaml.example  models.yaml  policies.yaml  policies.yaml.example  telemetry.yaml.example  tools.yaml
contributing/: index.html  index.xml
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: CHANGELOG.md  DEPENDENCIES.md  DOCKER_USAGE.md  IMPLEMENTATION_ERROR_REPORTING.md  README.md  SHELL_LINTING_ISSUES.md  SHELL_LINTING_QUICKSTART.md  SURFACES.md  USER_GUIDE_distribution.md  VISION.md  WORKFLOWS.md  auto-remediation-workflow.md  error-reporting-quick-reference.md  error-reporting-system.md  opencode_config.json  shell-linting-guide.md  silly_samuel-STYLE-GUIDE.md  specific_guidelines.md
docs-site/: ARCHITECTURE.md  README.md  hugo.toml  hugo_stats.json
doctrine/: CHANGELOG.md  DOCTRINE_DISTRIBUTION.md  DOCTRINE_MAP.md  DOCTRINE_STACK.md  GLOSSARY.md
examples/: spec_cache_usage.py
framework/: README.md  __init__.py  core.py  execution.py  interface.py
getting-started/: index.html  index.xml
guides/: index.html  index.xml
ops/: QUICKSTART.md  README.md  deploy-skills.js  skills-exporter.js
reference/: index.html  index.xml
scripts/: framework_install.sh  framework_package.sh  framework_upgrade.sh
specifications/: README.md
src/: README.md
tags/: index.html  index.xml
tests/: conftest.py  test_error_reporting.py  test_error_reporting_integration.sh  test_portfolio_initiative_grouping.py  test_task_age_checker.py  test_task_loading_bugs.py  test_task_utils.py  test_template_status_checker.py  test_validate_task_schema.py  validate_agent_hierarchy.py
tmp/: README.md
tools/: README.md  map-tasks-to-specs.py  migrate-old-task-format.py  ops-README.md  verify-sonar-config.sh
validation/: MUTATION_TESTING_QUICKSTART.md  README.md  TEST_COVERAGE.md  TEST_PYRAMID_ANALYSIS.md  test_agent_orchestrator.py  test_orchestration_e2e.py  test_task_age_checker.py  test_task_utils.py  test_template_status_checker.py  test_validate_task_schema.py  validate-task-schema.py  validate-work-structure.sh
work/: 2026-02-05-spec-kitty-architecture-completion.md  2026-02-06-initialization.md  2026-02-09-orchestrator-orphan-task-assignment.md  2026-02-10-generic-cursor-initialization.md  2026-02-11-bootstrap-initialization.md  2026-02-11-m51-task1-orchestration-prompt.md  2026-02-11-manager-mike-m5-orchestration.md  2026-02-12-bootstrap-initialization.md  2026-02-12-claude-sonnet-bootstrap.md  2026-02-12-task-validator-refactoring.md  20260212-212335-bootstrap-initialization.md  20260214-152923-bootstrap-initialization.md  20260214-1538-manager-mike-kitty-linguistic-analysis.md  AFK-STATUS.md  ASSESSMENT_SUMMARY.md  CHANGES_SUMMARY.txt  EXECUTIVE_SUMMARY.md  ISSUE_TEMPLATES_GUIDE.md  LOCAL_ENV.md  QUICK_REFERENCE.md  README.md  README_RESEARCH.md  SESSION_COMPLETE.md  boy-scout-rule-mission-2025-02-11.md  boy_scout_sqlite_fix.md  claude-deployment-completion-report.md  conceptual-alignment-assessment-synthesis.md  coverage-integration-changes.md  portability-enhancement-plan.md  portability-enhancement-summary.md  research_refactoring_patterns_summary.md  silly-samuel_LEX_DELTAS.md  silly-samuel_LEX_REPORT.md  silly-samuel_LEX_STYLE_RULES.md  silly-samuel_README.md  task-39-validation-summary.md  terminology-quick-reference.md  terminology-validation-report.md
(+2611 files in other folders)
