[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickstart-agent-augmented-development"
version = "0.1.0"
description = "Multi-tier agentic framework with file-based orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "ruamel.yaml>=0.17.0",
    "pytest>=7.0",
    "jsonschema>=4.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "Flask>=2.3.0",
    "Flask-SocketIO>=5.3.0",
    "Flask-CORS>=4.0.0",
    "watchdog>=3.0.0",
    "python-socketio>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=25.0",
    "ruff>=0.14.0",
    "mutmut>=3.4.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["framework*", "src*", "llm_service*"]
exclude = ["tmp*", "output*", "work*", "tools*", "fixtures*"]

[tool.mutmut]
# Paths to apply mutations
paths_to_mutate = "src/framework/orchestration/,framework/"

# Test runner command
runner = "python -m pytest tests/"

# Tests directory
tests_dir = "tests/"

# Patterns to exclude from mutation
dict_synonyms = ["Dict", "dict"]

# Timeout for each test run (seconds)
timeout = 60

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "timeout: marks tests with execution timeout limits",
]
