[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickstart-agent-augmented-development"
version = "0.1.0"
description = "Multi-tier agentic framework with file-based orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "ruamel.yaml>=0.17.0",
    "pytest>=7.0",
    "jsonschema>=4.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "Flask>=2.3.0",
    "Flask-SocketIO>=5.3.0",
    "Flask-CORS>=4.0.0",
    "watchdog>=3.0.0",
    "python-socketio>=5.10.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=25.0",
    "ruff>=0.14.0",
    "mutmut>=3.4.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",     # Architecture testing: module dependencies
    "pytestarch>=2.0",        # Architecture testing: detailed rules
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["framework*", "src*", "llm_service*"]
exclude = ["tmp*", "output*", "work*", "tools*", "fixtures*"]

[tool.mutmut]
# Paths to apply mutations
paths_to_mutate = "src/framework/orchestration/,framework/"

# Test runner command
runner = "python -m pytest tests/"

# Tests directory
tests_dir = "tests/"

# Patterns to exclude from mutation
dict_synonyms = ["Dict", "dict"]

# Timeout for each test run (seconds)
timeout = 60

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tools"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "timeout: marks tests with execution timeout limits",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "atdd: marks tests as acceptance test driven development tests",
    "tdd: marks tests as test driven development tests",
]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "Bounded context independence"
type = "layers"
layers = [
    "src.domain.common",
    "src.domain.collaboration | src.domain.doctrine | src.domain.specifications",
]

[[tool.importlinter.contracts]]
name = "No collaboration → doctrine imports"
type = "forbidden"
source_modules = ["src.domain.collaboration"]
forbidden_modules = ["src.domain.doctrine", "src.domain.specifications"]

[[tool.importlinter.contracts]]
name = "No doctrine → specifications imports"
type = "forbidden"
source_modules = ["src.domain.doctrine"]
forbidden_modules = ["src.domain.specifications"]

[[tool.importlinter.contracts]]
name = "Domain isolation from framework"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = ["src.framework", "src.llm_service"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "src.domain.*"
strict = true
